--- a/sub/sensors.cfg
+++ b/sub/sensors.cfg
@@ -9,7 +9,7 @@ sensor_type: temperature_host
 min_temp: -30
 max_temp: 90
 
-[temperature_sensor mcu_temp]
+[temperature_sensor mcu_temp] #for Robin nano4 v3.2 with GD32F407 - delete this section
 sensor_type: temperature_mcu
 min_temp: -20
 max_temp: 85
