fix address of printer

--- a/sub/shell_cmd.cfg
+++ b/sub/shell_cmd.cfg
@@ -8,3 +8,12 @@ gcode:
   {% set id = params.ID|default(написать_id_чата) %}
   {% set message = params.MSG %}
   RUN_SHELL_COMMAND CMD=send_pic PARAMS="{id} '{message}'"
+
+[gcode_shell_command git_update]
+command: git -C /home/pi/FBG62_data/gcodes/vog pull origin
+timeout: 25.
+verbose: True
+
+[gcode_macro VOG_UPDATE]
+gcode:
+  RUN_SHELL_COMMAND CMD=git_update
