--- a/sub/shell_cmd.cfg
+++ b/sub/shell_cmd.cfg
@@ -8,3 +8,23 @@ gcode:
   {% set id = params.ID|default(написать_id_чата) %}
   {% set message = params.MSG %}
   RUN_SHELL_COMMAND CMD=send_pic PARAMS="{id} '{message}'"
+
+#save login git: ~$ git config --global credential.helper store
+[gcode_shell_command git_update]
+command: git -C /path/to/dir pull origin
+timeout: 15.
+verbose: True
+
+[gcode_shell_command git_bash]
+command: git
+timeout: 15.
+verbose: True
+
+[gcode_macro GIT_UPDATE]
+gcode:
+  RUN_SHELL_COMMAND CMD=git_update
+
+[gcode_macro GIT_MODE]
+gcode:
+  {% set branch = params.BRANCH|default(master) %}
+  RUN_SHELL_COMMAND CMD=git_bash PARAMS="-C /path/to/dir checkout '{branch}'"
